# Logic-Puzzles

./: .env.example  .env.exmaple  COMMANDS.sh  Dockerfile  QUICK_SUBMIT.md  README.md  ROUND1_CHECKLIST.md  ROUND1_STEPS.sh  SUBMISSION_GUIDE.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
.github/workflow/: openenv.yaml
.github/workflows/: validate.yml
docs/: DOCUMENTATION.md  access-urls-and-ports.md  api-reference.md  architecture.md  clone.md  contributing.md  docker-run.md  docker.md  environment-variables.md  faq.md  glossary.md  index.md  installation.md  local-run.md  local.md  overview.md  quick-start.md  round1-checks.md  submission.md  task-format.md  troubleshooting.md
docs/round1/: checklist.md  quick-submit.md  submission-guide.md
scripts/: build_image.sh  commands.sh  deploy_openenv.sh  round1_steps.sh  setup_env.sh  validate-submission.sh
server/: Dockerfile  __init__.py  app.py  environment.py
